# almanac

./: .gitignore  CLAUDE.md
backend/: pyproject.toml
backend/app/: db.py  exceptions.py  main.py  metrics.py  models.py  scheduler.py  schemas.py  seed.py  service.py
backend/app/routers/: catalog.py  logs.py  today.py  ui.py
backend/app/static/: app.css
backend/app/templates/: _activity.html  _fact.html  _queue_item.html  _queue_item_logged.html  _quiz_result.html  base.html  dashboard.html  domain_detail.html  home.html  level.html  section.html
backend/migrations/: env.py
backend/migrations/versions/: 26e3e82dff3b_add_fact_review.py  2ce46a888019_initial_schema.py  4b31b3dc086c_lessons_quizzes_count_goal.py  ba5ea1a237c4_initial_schema.py  de3dce754b5d_level_ordering_for_sections.py
backend/tests/: conftest.py  test_api.py  test_metrics.py  test_migration.py  test_progress.py  test_scheduler.py  test_seed.py
content/: 01-social-calibration.md  02-assertiveness.md  03-conflict-negotiation.md  04-hosting-cooking.md  05-long-view.md  06-etiquette.md  07-health.md  08-home-car-travel.md  09-style-grooming.md  10-first-aid.md
docs/: extra-topics.md  source.md
